// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWorker > should generate cron file content matching snapshot 1`] = `
"import type { LindormWorkerCallback } from "@lindorm/worker";

export const CALLBACK: LindormWorkerCallback = async (ctx) => {
  ctx.logger.verbose("Worker executed");
};

export const CRON = "0 0 * * *";
"
`;

exports[`generateWorker > should generate file content matching snapshot 1`] = `
"import type { LindormWorkerCallback } from "@lindorm/worker";

export const CALLBACK: LindormWorkerCallback = async (ctx) => {
  ctx.logger.verbose("Worker executed");
};

export const INTERVAL = "5m";
"
`;
